# pocket-resources

./: .travis.yml  Cargo.toml  README.md
demo/: Cargo.toml  build.rs
demo/resources/: a.txt
demo/resources/subdir1/: b.txt
demo/resources/subdir2/: c.txt
demo/src/: main.rs
src/: lib.rs
